--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -11,10 +11,10 @@
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
-    <script href="bootstrap/js/bootstrap.js" rel="stylesheet"></script>
-    <script href="bootstrap/js/jquery.js" rel="stylesheet"></script>
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="../bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
+    <script href="../bootstrap/js/bootstrap.js" rel="stylesheet"></script>
+    <script href="../bootstrap/js/jquery.js" rel="stylesheet"></script>
     <title>Employee details page</title>
 </head>
 <body>
