--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -20,16 +20,11 @@
 <body>
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="index.html">Employee details page</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="enter.php">Enter details</a></li>
-                <li class="nav-item"><a class="nav-link" href="get.php">Get details</a></li>
-            </ul>
-        </div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="enter.php">Enter details</a></li>
+            <li class="nav-item"><a class="nav-link" href="get.php">Get details</a></li>
+        </ul>
     </nav>
 </body>
 </html>
