--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -19,12 +19,10 @@
 </head>
 <body>
     <nav class="navbar navbar-light nav-justified nav-pills" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="index.html">Employee details page</a>
-        <ul class="nav">
-            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="enter.php">Enter details</a></li>
-            <li class="nav-item"><a class="nav-link" href="get.php">Get details</a></li>
-        </ul>
+        <a class="nav-item navbar-brand" href="index.html">Employee details page</a>
+        <a class="nav-item nav-link active" href="index.html">Home</a></li>
+        <a class="nav-item nav-link" href="enter.php">Enter details</a></li>
+        <a class="nav-item nav-link" href="get.php">Get details</a></li>
     </nav>
 </body>
 </html>
