--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -18,7 +18,7 @@
     <title>Employee details page</title>
 </head>
 <body>
-    <nav class="navbar navbar-light nav-justified nav-pills" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-light nav-pills justify-content-center" style="background-color: #e3f2fd;">
         <a class="nav-item navbar-brand" href="index.html">Employee details page</a>
         <a class="nav-item nav-link active" href="index.html">Home</a></li>
         <a class="nav-item nav-link" href="enter.php">Enter details</a></li>
