--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -18,13 +18,11 @@
     <title>Employee details page</title>
 </head>
 <body>
-    <nav class="navbar navbar-light nav-pills" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
         <a class="nav-item navbar-brand" href="index.html">Employee details page</a>
-        <div class="justify-content-center">
-            <a class="nav-item nav-link active" href="index.html">Home</a></li>
-            <a class="nav-item nav-link" href="enter.php">Enter details</a></li>
-            <a class="nav-item nav-link" href="get.php">Get details</a></li>
-        </div>
+        <a class="nav-item nav-link active" href="index.html">Home</a></li>
+        <a class="nav-item nav-link" href="enter.php">Enter details</a></li>
+        <a class="nav-item nav-link" href="get.php">Get details</a></li>
     </nav>
 </body>
 </html>
