--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -20,9 +20,23 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
         <a class="nav-item navbar-brand" href="index.html">Employee details page</a>
-        <a class="nav-item nav-link active" href="index.html">Home</a></li>
-        <a class="nav-item nav-link" href="enter.php">Enter details</a></li>
-        <a class="nav-item nav-link" href="get.php">Get details</a></li>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-item nav-link active" href="index.html">Home</a></li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="enter.php">Enter details</a></li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="get.php">Get details</a></li>
+                </li>
+            </ul>
+        </div>
     </nav>
 </body>
 </html>
