--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -39,7 +39,17 @@
         </div>
     </nav>
     <div class="container-fluid text-center">
-        <div class="col-sm-2 sidenav"></div>
+        <div class="col-sm-2 sidenav">
+            <div class="well">
+                <p>INTRUSIVE ADS</p>
+            </div>
+            <div class="well">
+                <p>INTRUSIVE ADS</p>
+            </div>
+            <div class="well">
+                <p>INTRUSIVE ADS</p>
+            </div>
+        </div>
         <div class="col-sm-8 text-left">
             <h1>Your new administrative space</h1>
             <p>Using our revolutionary new proprietary database entry technology, updating your employees' details has never been easier!</p>
@@ -51,7 +61,17 @@
                 <li class="list-group-item"><a href="get.php">Get details</a></li>
             </ul>
         </div>
-        <div class="col-sm-2 sidenav"></div>
+        <div class="col-sm-2 sidenav">
+            <div class="well">
+                <p>INTRUSIVE ADS</p>
+            </div>
+            <div class="well">
+                <p>INTRUSIVE ADS</p>
+            </div>
+            <div class="well">
+                <p>INTRUSIVE ADS</p>
+            </div>
+        </div>
     </div>
     <footer class="container-fluid text-center">
         <p>Copyright &copy; 2020 ROFL Inc. All rights reserved</p>
