--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -39,37 +39,39 @@
         </div>
     </nav>
     <div class="container-fluid text-center">
-        <div class="col-sm-2 sidenav">
-            <div class="well">
-                <p>INTRUSIVE ADS</p>
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+                <div class="well">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="well">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="well">
+                    <p>INTRUSIVE ADS</p>
+                </div>
             </div>
-            <div class="well">
-                <p>INTRUSIVE ADS</p>
+            <div class="col-sm-8 text-left">
+                <h1>Your new administrative space</h1>
+                <p>Using our revolutionary new proprietary database entry technology, updating your employees' details has never been easier!</p>
+                <hr>
+                <h3>Sitemap</h3>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="index.html">Home</a></li>
+                    <li class="list-group-item"><a href="enter.php">Enter details</a></li>
+                    <li class="list-group-item"><a href="get.php">Get details</a></li>
+                </ul>
             </div>
-            <div class="well">
-                <p>INTRUSIVE ADS</p>
-            </div>
-        </div>
-        <div class="col-sm-8 text-left">
-            <h1>Your new administrative space</h1>
-            <p>Using our revolutionary new proprietary database entry technology, updating your employees' details has never been easier!</p>
-            <hr>
-            <h3>Sitemap</h3>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="index.html">Home</a></li>
-                <li class="list-group-item"><a href="enter.php">Enter details</a></li>
-                <li class="list-group-item"><a href="get.php">Get details</a></li>
-            </ul>
-        </div>
-        <div class="col-sm-2 sidenav">
-            <div class="well">
-                <p>INTRUSIVE ADS</p>
-            </div>
-            <div class="well">
-                <p>INTRUSIVE ADS</p>
-            </div>
-            <div class="well">
-                <p>INTRUSIVE ADS</p>
+            <div class="col-sm-2 sidenav">
+                <div class="well">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="well">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="well">
+                    <p>INTRUSIVE ADS</p>
+                </div>
             </div>
         </div>
     </div>
