--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -74,13 +74,13 @@
     <div class="container-fluid text-center">
         <div class="row content">
             <div class="col-sm-2 sidenav">
-                <div class="well">
+                <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="well">
+                <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="well">
+                <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
             </div>
@@ -96,13 +96,13 @@
                 </ul>
             </div>
             <div class="col-sm-2 sidenav">
-                <div class="well">
+                <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="well">
+                <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="well">
+                <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
             </div>
