--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -18,7 +18,7 @@
         }
 
         /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        .row.content {height: 1440px}
+        .row.content {height: 100%}
 
         /* Set gray background color and 100% height */
         .sidenav {
@@ -83,6 +83,27 @@
                 <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
             </div>
             <div class="col-sm-8 text-left">
                 <h1>Your new administrative space</h1>
@@ -96,6 +117,27 @@
                 </ul>
             </div>
             <div class="col-sm-2 sidenav">
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
+                <div class="jumbotron">
+                    <p>INTRUSIVE ADS</p>
+                </div>
                 <div class="jumbotron">
                     <p>INTRUSIVE ADS</p>
                 </div>
