--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -74,28 +74,28 @@
     <div class="container-fluid text-center">
         <div class="row content">
             <div class="col-sm-2 sidenav">
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
             </div>
             <div class="col-sm-8 text-left">
                 <h1>Your new administrative space</h1>
-                <p>Using our revolutionary new proprietary database entry technology, updating your employees' details has never been easier!</p>
+                <p>Using our revolutionary new proprietary database entry technology, updating your employee details has never been easier!</p>
                 <hr>
                 <h3>Sitemap</h3>
                 <ul class="list-group list-group-flush">
@@ -105,22 +105,22 @@
                 </ul>
             </div>
             <div class="col-sm-2 sidenav">
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron">
+                <div class="jumbotron btn-danger">
                     <p>INTRUSIVE ADS</p>
                 </div>
                 </div>
