--- a/php_tut/code/employee_details/index.html
+++ b/php_tut/code/employee_details/index.html
@@ -74,22 +74,22 @@
     <div class="container-fluid text-center">
         <div class="row content">
             <div class="col-sm-2 sidenav">
-                <div class="jumbotron bg-danger">
+                <div class="jumbotron bg-danger" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-danger">
+                <div class="jumbotron bg-danger" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-danger">
+                <div class="jumbotron bg-danger" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-danger">
+                <div class="jumbotron bg-danger" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-danger">
+                <div class="jumbotron bg-danger" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-danger">
+                <div class="jumbotron bg-danger" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
             </div>
@@ -105,22 +105,22 @@
                 </ul>
             </div>
             <div class="col-sm-2 sidenav">
-                <div class="jumbotron bg-warning">
+                <div class="jumbotron bg-warning" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-warning">
+                <div class="jumbotron bg-warning" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-warning">
+                <div class="jumbotron bg-warning" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-warning">
+                <div class="jumbotron bg-warning" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-warning">
+                <div class="jumbotron bg-warning" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
-                <div class="jumbotron bg-warning">
+                <div class="jumbotron bg-warning" hidden>
                     <p>INTRUSIVE ADS</p>
                 </div>
                 </div>
